@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 2021-XX-XX  Release 7.32.4                                     ---
 ----------------------------------------------------------------------
 
+* enabled draw -h (hidden line mode) in MGED - Cliff Yapp
 * added -o output option to GED stat command - Cliff Yapp
 * fixed overlay support for drawing multiple files - Cliff Yapp
 * fixed file creation for tire command - Cliff Yapp
